--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <link rel="stylesheet" href="assets/output.css">
 </head>
 
-<body class="bg-amber-50 min-h-dvh text-[18px] grid place-content-center leading-[1] font-dmsans">
+<body class="bg- min-h-dvh text-[18px] grid place-content-center leading-[1] font-dmsans">
   <main class="bento-grid">
     <div
       class="bg-secondary-100 overflow-hidden rounded-xl pt-24 pr-8 pb-0 pl-10 max-lg:text-center max-md:p-8 max-md:text-left box-1">
@@ -19,9 +19,9 @@
     </div>
     <div
       class="bg-primary-500 overflow-hidden rounded-xl p-8 text-center font-medium flex flex-col items-center justify-center max-lg:text-center box-2">
-      <p class="text-xlg-text font-medium text-secondary-100 text-center">
-        Social Media <span class="text-secondary-500 emphasis">10x</span> <em>Faster</em> with AI
-      </p>
+      <h1 class="text-xlg-text font-medium text-secondary-100 text-center">
+        Social Media <sh1an class="text-secondary-500 emphasis">10x</span> <em>Faster</em> with AI
+      </h1>
       <img class="w-64 mt-4 mx-0 mb-2" src="assets/images/illustration-five-stars.webp" alt="image five stars 5"
         width="250px" height="50px">
       <p class="text-sm-text font-normal text-secondary-100">
