add background white body

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <link rel="stylesheet" href="assets/output.css">
 </head>
 
-<body class="bg- min-h-dvh text-[18px] grid place-content-center leading-[1] font-dmsans">
+<body class="bg-[#f2f2f2] min-h-dvh text-[18px] grid place-content-center leading-[1] font-dmsans">
   <main class="bento-grid">
     <div
       class="bg-secondary-100 overflow-hidden rounded-xl pt-24 pr-8 pb-0 pl-10 max-lg:text-center max-md:p-8 max-md:text-left box-1">
