--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <div
       class="bg-primary-500 overflow-hidden rounded-xl p-8 text-center font-medium flex flex-col items-center justify-center max-lg:text-center box-2">
       <h1 class="text-xlg-text font-medium text-secondary-100 text-center">
-        Social Media <sh1an class="text-secondary-500 emphasis">10x</span> <em>Faster</em> with AI
+        Social Media <span class="text-secondary-500 emphasis">10x</span> <em>Faster</em> with AI
       </h1>
       <img class="w-64 mt-4 mx-0 mb-2" src="assets/images/illustration-five-stars.webp" alt="image five stars 5"
         width="250px" height="50px">
